--- a/flix/Base.lproj/Main.storyboard
+++ b/flix/Base.lproj/Main.storyboard
@@ -1,24 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MLT-M2-Zup">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Movies-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MoviesViewController" customModule="flix" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wzn-7z-tIS">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="134" id="3I3-yN-HSx" customClass="MovieCell" customModule="flix" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="134"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3I3-yN-HSx" id="uv2-JR-ntp">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="134"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tLT-et-4v3">
+                                                    <rect key="frame" x="7" y="9" width="100" height="115"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="pEq-De-Bbh"/>
+                                                        <constraint firstAttribute="height" constant="117" id="uYW-Ox-5v3"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Pn-7r-M9F">
+                                                    <rect key="frame" x="112" y="11" width="255" height="29"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ag7-Nr-GTW">
+                                                    <rect key="frame" x="112" y="48" width="255" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Ag7-Nr-GTW" firstAttribute="top" secondItem="0Pn-7r-M9F" secondAttribute="bottom" constant="8" id="59a-py-iC7"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="tLT-et-4v3" secondAttribute="bottom" constant="10" id="5OD-Au-sUQ"/>
+                                                <constraint firstItem="Ag7-Nr-GTW" firstAttribute="top" secondItem="0Pn-7r-M9F" secondAttribute="bottom" constant="8" id="AsI-IJ-oeJ"/>
+                                                <constraint firstItem="0Pn-7r-M9F" firstAttribute="top" secondItem="uv2-JR-ntp" secondAttribute="top" constant="11" id="KvH-Y8-6mJ"/>
+                                                <constraint firstItem="0Pn-7r-M9F" firstAttribute="leading" secondItem="tLT-et-4v3" secondAttribute="trailing" constant="5" id="Nz7-JL-a87"/>
+                                                <constraint firstItem="tLT-et-4v3" firstAttribute="leading" secondItem="uv2-JR-ntp" secondAttribute="leading" constant="7" id="b0b-Nc-qyr"/>
+                                                <constraint firstAttribute="trailing" secondItem="Ag7-Nr-GTW" secondAttribute="trailing" constant="8" id="c50-Pz-rLs"/>
+                                                <constraint firstAttribute="trailing" secondItem="0Pn-7r-M9F" secondAttribute="trailing" constant="8" id="hG9-eD-2rK"/>
+                                                <constraint firstItem="Ag7-Nr-GTW" firstAttribute="leading" secondItem="tLT-et-4v3" secondAttribute="trailing" constant="5" id="jUV-ql-9rd"/>
+                                                <constraint firstItem="tLT-et-4v3" firstAttribute="top" secondItem="uv2-JR-ntp" secondAttribute="top" constant="9" id="rCU-GX-gR4"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Ag7-Nr-GTW" secondAttribute="bottom" constant="10" id="zPQ-HX-hV0"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="posterView" destination="tLT-et-4v3" id="Iz6-il-uxt"/>
+                                            <outlet property="synopsisLabel" destination="Ag7-Nr-GTW" id="r3A-bO-mXT"/>
+                                            <outlet property="titleLabel" destination="0Pn-7r-M9F" id="FvD-lj-K2R"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="wzn-7z-tIS" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="4Mn-U0-gRf"/>
+                            <constraint firstItem="wzn-7z-tIS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="K9e-hT-dTy"/>
+                            <constraint firstItem="wzn-7z-tIS" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" symbolic="YES" id="N82-lj-qVW"/>
+                            <constraint firstItem="wzn-7z-tIS" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="dNm-4M-nvI"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Movies" id="qB2-vk-1hR"/>
+                    <connections>
+                        <outlet property="tableView" destination="wzn-7z-tIS" id="UYb-Ft-MX9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="901.60000000000002" y="136.28185907046478"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="7Rz-6S-NGD">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="MLT-M2-Zup" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="beN-gK-npp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="cXK-se-6fZ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sbl-nG-bqB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="138.40000000000001" y="137.18140929535232"/>
         </scene>
     </scenes>
 </document>
